services/actual-budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: services
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: actual-budget
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual-budget
    spec:
      containers:
      - name: actual-budget
        image: actualbudget/actual-server:26.2.1
        ports: 
          - containerPort: 5006
        volumeMounts:
        - mountPath: /data
          name: actual-budget-data
      volumes:
      - name: actual-budget-data
        persistentVolumeClaim:
          claimName:  actual-budget-data-claim
