services/actual-budget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: services
spec:
  selector:
    app.kubernetes.io/name: actual-budget
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
