services/actual-budget/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://actual.local.hohepa.dev
    gethomepage.dev/group: Services
    gethomepage.dev/name: Actual Budget
    gethomepage.dev/icon: actual-budget.png
    gethomepage.dev/app: actual-budget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`actual.local.hohepa.dev`)
      kind: Rule
      services:
        - name: actual-budget
          port: 5006
  tls:
    secretName: local-hohepa-dev-tls
